// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletVote multi vote networks should render a vote for multiple active and resigned delegates 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span
          class="transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-500"
        >
          Multivote
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Votes
        </span>
        <span>
          2
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /101
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold"
        >
          Active 1
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
             / Resigned 1
          </span>
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote multi vote networks should render a vote for multiple active and standby delegates 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span
          class="transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-500"
        >
          Multivote
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Votes
        </span>
        <span>
          2
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /101
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold"
        >
          Active 1
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
             / Standby 1
          </span>
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote multi vote networks should render a vote for multiple active delegates 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span
          class="transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-500"
        >
          Multivote
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Votes
        </span>
        <span>
          2
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /101
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="font-semibold text-theme-success-600"
        >
          All Active
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote multi vote networks should render a vote for multiple active, standby and resigned delegates 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span
          class="transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-500"
        >
          Multivote
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Votes
        </span>
        <span>
          3
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /101
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold"
        >
          Active 1
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
             / Standby 1
          </span>
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
             & Resigned 1
          </span>
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote multi vote networks should render a vote for multiple standby and resigned delegates 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span
          class="transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-500"
        >
          Multivote
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Votes
        </span>
        <span>
          2
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /101
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold"
        >
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Standby 1
          </span>
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
             & Resigned 1
          </span>
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote multi vote networks should render a vote for multiple standby delegates 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span
          class="transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-500"
        >
          Multivote
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Votes
        </span>
        <span>
          2
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /101
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold text-theme-warning-500"
        >
          All Standby
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should disable vote button when balance is less than votesAmountStep 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span>
          arkx
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Rank
        </span>
        <span>
          N/A
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Locked Votes
        </span>
        <span
          class="whitespace-nowrap"
          data-testid="Amount"
        >
          5 DARK
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Locked Unvotes
        </span>
        <span
          class="whitespace-nowrap"
          data-testid="Amount"
        >
          5 DARK
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold text-theme-danger-600"
        >
          Resigned
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 fyuekd space-x-2"
      data-testid="WalletVote__button"
      disabled=""
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should handle delegate sync error 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            vote.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col justify-between"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="leading-none"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Delegate yet.
          </span>
          <a
            class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="#"
            rel="noopener noreferrer"
            to="https://ark.dev/docs/desktop-wallet/user-guides/how-to-vote-unvote"
          >
            <span
              class="Link__Content-sc-ec014t-1 hUiuRR"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should handle wallet votes error 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            vote.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col justify-between"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="leading-none"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Delegate yet.
          </span>
          <a
            class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="#"
            rel="noopener noreferrer"
            to="https://ark.dev/docs/desktop-wallet/user-guides/how-to-vote-unvote"
          >
            <span
              class="Link__Content-sc-ec014t-1 hUiuRR"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span>
          arkx
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Rank
        </span>
        <span>
          N/A
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold text-theme-danger-600"
        >
          Resigned
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render as all resigned 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span
          class="transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-500"
        >
          Multivote
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Rank
        </span>
        <span>
          N/A
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold text-theme-danger-600"
        >
          All Resigned
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render disabled vote button 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span>
          arkx
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Rank
        </span>
        <span>
          N/A
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold text-theme-danger-600"
        >
          Resigned
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 fyuekd space-x-2"
      data-testid="WalletVote__button"
      disabled=""
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render the maximum votes 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            vote.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col justify-between"
      >
        <span
          class="font-semibold"
        >
          My Votes
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/101
          </span>
        </span>
        <span
          class="leading-none"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Delegate yet.
          </span>
          <a
            class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="#"
            rel="noopener noreferrer"
            to="https://ark.dev/docs/desktop-wallet/user-guides/how-to-vote-unvote"
          >
            <span
              class="Link__Content-sc-ec014t-1 hUiuRR"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render without votes 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="flex flex-1 items-center space-x-4"
    >
      <div
        class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-500 text-theme-secondary-500 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            vote.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col justify-between"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="leading-none"
        >
          <span
            class="mr-1 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            You have not voted for a Delegate yet.
          </span>
          <a
            class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="#"
            rel="noopener noreferrer"
            to="https://ark.dev/docs/desktop-wallet/user-guides/how-to-vote-unvote"
          >
            <span
              class="Link__Content-sc-ec014t-1 hUiuRR"
            >
              <span
                class="text-sm"
              >
                Learn more
              </span>
            </span>
            <div
              class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote single vote networks should render a vote for a delegate without rank 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span>
          arkx
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Rank
        </span>
        <span>
          N/A
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold text-theme-warning-500"
        >
          Standby
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote single vote networks should render a vote for a standby delegate 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span>
          arkx
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Rank
        </span>
        <span>
          #52
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="flex items-center justify-center w-5 h-5 rounded-full bg-theme-primary-600 dark:bg-theme-secondary-800"
        >
          <div
            class="sc-bdnxRM AkeAK text-theme-primary-200 dark:text-theme-secondary-200"
            height="10"
            width="10"
          >
            <svg>
              hint-small.svg
            </svg>
          </div>
        </span>
        <span
          class="font-semibold text-theme-warning-500"
        >
          Standby
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote single vote networks should render a vote for an active delegate 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full"
    data-testid="WalletVote"
  >
    <div
      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-secondary-900 text-theme-secondary-900 dark:border-theme-secondary-700 dark:text-theme-secondary-700 ring-theme-background dark:ring-theme-secondary-background"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Voting for
        </span>
        <span>
          arkx
        </span>
      </div>
      <div
        class="flex flex-col justify-between pl-6 ml-6 font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Rank
        </span>
        <span>
          #10
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-between items-end pr-6 mr-6 font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <span
        class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Delegate Status
      </span>
      <div
        class="flex justify-end items-center space-x-2"
      >
        <span
          class="font-semibold text-theme-success-600"
        >
          Active
        </span>
      </div>
    </div>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <div
          class="sc-bdnxRM AFVmm"
          height="16"
          width="16"
        >
          <svg>
            vote.svg
          </svg>
        </div>
        <span>
          Vote
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
